compiler/src/test/resources/amyc/nameAnalyzer/passing/Recursive.amy
module Rec
  fn foo(i: Int): Int = { foo(i - 1) }
end Rec
