compiler/src/test/resources/amyc/nameAnalyzer/failing/ArgumentNumberFunction.amy
object Args
  fn foo(i: Int): Int = { foo(1, 2) }
end Args
